# udacity_generative_ai_nanodegree

./: .gitignore  README.md
project1_fine_tuning_foundational_model/: Project1-Apply_light_finetunning_to_LFM-Copy1.ipynb  Project1-Apply_light_finetunning_to_LFM.ipynb  Project1-Apply_light_finetunning_to_LFM_submission.ipynb  README.md  pyproject.toml
project1_fine_tuning_foundational_model/exercise_notebooks/: Exercise1-classification-of-handwritten-digits-using-an-mlp.ipynb  Exercise2-pytorch-and-hugging-face-scavenger-huntscavenger-hunt.ipynb  Pytorch_tutorial.ipynb
project1_fine_tuning_foundational_model/notebooks/: Exercise1-classification-of-handwritten-digits-using-an-mlp.ipynb  Exercise2-pytorch-and-hugging-face-scavenger-huntscavenger-hunt.ipynb  Project1-Apply_light_finetunning_to_LFM.ipynb  Pytorch_tutorial.ipynb
project1_fine_tuning_foundational_model/notebooks/gpt2-imdb-peft/best_model/: adapter_model.safetensors
project2_openai_custom_chatbot/: Project2-OpenAI_custom_chatbot.ipynb  README.md  nba_playoffs_wikipedia.json  nba_playoffs_wikipedia_summarized.json  pyproject.toml
project3_ai_photo_editing/: README.md  project2_ai_photo_editing_with_inpaiting.ipynb  project3_ai_photo_editing_with_inpaiting.ipynb
project4_langchain_agents/: README.md  listings.json  project4_Langchain_Realstate_agent.ipynb  pyproject.toml
