[project]
name = "project1-fine-tuning-foundational-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
]
