[project]
name = "project1-fine-tuning-foundational-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "deepspeed>=0.16.4",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.27.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "matplotlib>=3.10.0",
    "netron>=8.1.7",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "plotly>=6.0.0",
    "polars>=1.22.0",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "transformers[torch]>=4.48.0",
]
