[project]
name = "project2-openai-custom-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.6",
    "openai==0.26.1",
    "pandas>=2.2.3",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "wikipedia-api>=0.8.1",
]
